Much bigger improvement for perf - get rid of useless kebab case tx!